fix: correcion de migraciones y fechas
